--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <form>
+        <label for="email">Email</label><br>
+        <input type="email" name="" id="email"><br>
+        <label for="password">Password</label><br>
+        <input type="password" name="" id="password"><br>
+       <label for="male">Male</label>
+       <input type="radio" name="gender" id="male">
+       <label for="female">Female</label>
+       <input type="radio" name="gender" id="female">
+       <input type="submit" value="submit">
+       </form>
+   
+</body>
+</html>
